final touch and minor changes

--- a/Auto Spa - Car Wash/Service's.html
+++ b/Auto Spa - Car Wash/Service's.html
@@ -23,26 +23,29 @@
 
     <nav class="navbar navbar-expand-xl fixed-top" id="navigation">
 
-      <a href="index.html" class="navbar-brand"><img src="assets/image/logo_sticky.png" height="80px" class="ms-5"></a>
+      <a href="index.html" class="navbar-brand">
+        <div id="logo-img"></div>
+      </a>
       <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navi" id="nav-btn">
         <i class="navbar-toggler-icon"></i>
       </button>
 
       <div class="collapse navbar-collapse justify-content-center" id="navi">
         <ul class="navbar-nav">
-          <li class="nav-item"><a href="Home.html" class="nav-link"><span class="nav-txt hvr-float">HOME</span></a></li>
-          <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">BOOKING</span></a>
+          <li class="nav-item"><a href="index.html" class="nav-link hvr-underline-reveal"><span
+                class="nav-txt">HOME</span></a></li>
           </li>
-          <li class="nav-item"><a href="Service's.html" class="nav-link"><span
-                class="nav-txt hvr-float">SERVICES</span></a></li>
-          <li class="nav-item"><a href="Gallery.html" class="nav-link"><span
-                class="nav-txt hvr-float">GALLERY</span></a></li>
-          <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">SHOP</span></a>
+          <li class="nav-item"><a href="Service's.html" class="nav-link hvr-underline-reveal"><span
+                class="nav-txt">SERVICES</span></a></li>
+          <li class="nav-item"><a href="Gallery.html" class="nav-link hvr-underline-reveal"><span
+                class="nav-txt">GALLERY</span></a>
           </li>
-          <li class="nav-item"><a href="About.html" class="nav-link"><span class="nav-txt hvr-float">ABOUT</span></a>
+          <li class="nav-item"><a href="About.html" class="nav-link hvr-underline-reveal"><span
+                class="nav-txt">ABOUT</span></a>
           </li>
-          <li class="nav-item"><a href="Contact.html" class="nav-link"><span
-                class="nav-txt hvr-float">CONTACT</span></a></li>
+          <li class="nav-item"><a href="Contact.html" class="nav-link hvr-underline-reveal"><span
+                class="nav-txt">CONTACT</span></a>
+          </li>
         </ul>
 
         <div id="icn-box">
@@ -60,7 +63,7 @@
 
       <h1 class="srvc-bnr-txt" data-aos="zoom-in">SERVICES</h1>
 
-      <a href="Home.html" class="brdcrumb-lnk" style="position: relative;top: 220px;">HOME</a>
+      <a href="index.html" class="brdcrumb-lnk" style="position: relative;top: 220px;">HOME</a>
       <span class="brdcrumb-divider" style="position: relative;top: 220px;">></span>
       <span class="brdcrumb-txt" style="position: relative;top: 220px;">SERVICES</span>
 
