--- a/Auto Spa - Car Wash/About.html
+++ b/Auto Spa - Car Wash/About.html
@@ -17,33 +17,31 @@
 </head>
 
 <body>
-
     <div class="container-fluid about-bnr">
         <nav class="navbar navbar-expand-xl fixed-top" id="navigation">
-
-            <a href="index.html" class="navbar-brand"><img src="assets/image/logo_sticky.png" height="80px"
-                    class="ms-5"></a>
+            <a href="index.html" class="navbar-brand">
+                <div id="logo-img"></div>
+            </a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navi" id="nav-btn">
                 <i class="navbar-toggler-icon"></i>
             </button>
 
             <div class="collapse navbar-collapse justify-content-center" id="navi">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="Home.html" class="nav-link"><span
-                                class="nav-txt hvr-float">HOME</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">BOOKING</span></a>
+                    <li class="nav-item"><a href="index.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">HOME</span></a></li>
                     </li>
-                    <li class="nav-item"><a href="Service's.html" class="nav-link"><span
-                                class="nav-txt hvr-float">SERVICES</span></a></li>
-                    <li class="nav-item"><a href="Gallery.html" class="nav-link"><span
-                                class="nav-txt hvr-float">GALLERY</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">SHOP</span></a>
+                    <li class="nav-item"><a href="Service's.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">SERVICES</span></a></li>
+                    <li class="nav-item"><a href="Gallery.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">GALLERY</span></a>
                     </li>
-                    <li class="nav-item"><a href="About.html" class="nav-link"><span
-                                class="nav-txt hvr-float">ABOUT</span></a>
+                    <li class="nav-item"><a href="About.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">ABOUT</span></a>
                     </li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link"><span
-                                class="nav-txt hvr-float">CONTACT</span></a></li>
+                    <li class="nav-item"><a href="Contact.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">CONTACT</span></a>
+                    </li>
                 </ul>
 
                 <div id="icn-box">
@@ -54,7 +52,6 @@
                     <a href=""><i class="hvr-float fa-solid fa-magnifying-glass nav-icn"></i></a>
                 </div>
             </div>
-
         </nav>
 
         <div class="container text-center">
@@ -62,12 +59,11 @@
                 ABOUT
             </h1>
 
-            <a href="Home.html" class="brdcrumb-lnk">HOME</a>
+            <a href="index.html" class="brdcrumb-lnk">HOME</a>
             <span class="brdcrumb-divider">></span>
             <span class="brdcrumb-txt">ABOUT</span>
         </div>
     </div>
-
 
     <div class="container-fluid">
         <div class="container">
@@ -144,42 +140,54 @@
                     <div class="mt-4" id="icn-1">
                         <img src="assets/image/bg-fixed-icn/sm-icon-arrow.png" class="ques-arrow-icn" />
                     </div>
-                    <p class="about-question" id="ques-1">HOW OFTEN SHOULD I HAVE MY VEHICLE WASHED?</p>
-                    <p class="mt-4" id="ans-1">Metro vehicula est terminal integer. Suspendisse a novum etos
-                        pellentesque a non felis maecenas malesuada. Primus elit lectus at felis, malesuada ultric
-                        curabitur a ligula sande novum. Porta an urna, vestibulum commodo.
+                    <p class="about-question" id="ques-1">
+                        HOW OFTEN SHOULD I HAVE MY VEHICLE WASHED?
+                    </p>
+                    <p class="mt-4" id="ans-1">
+                        Metro vehicula est terminal integer. Suspendisse a novum etos
+                        pellentesque a non felis maecenas malesuada. Primus elit lectus at
+                        felis, malesuada ultric curabitur a ligula sande novum. Porta an
+                        urna, vestibulum commodo.
                     </p>
 
                     <div class="ques-arrow-icn-border mt-4" id="icn-2">
                         <img src="assets/image/bg-fixed-icn/sm-icon-arrow.png" class="ques-arrow-icn" />
                     </div>
-                    <p class="about-question" id="ques-2">WHEN SHOULD I WASH OFF INSECT RESIDUE?</p>
-                    <p class="about-answer mt-4" id="ans-2">Metro vehicula est terminal integer. Suspendisse a novum
-                        etos
-                        pellentesque a non felis maecenas malesuada. Primus elit lectus at felis, malesuada ultric
-                        curabitur a ligula sande novum. Porta an urna, vestibulum commodo.
+                    <p class="about-question" id="ques-2">
+                        WHEN SHOULD I WASH OFF INSECT RESIDUE?
+                    </p>
+                    <p class="about-answer mt-4" id="ans-2">
+                        Metro vehicula est terminal integer. Suspendisse a novum etos
+                        pellentesque a non felis maecenas malesuada. Primus elit lectus at
+                        felis, malesuada ultric curabitur a ligula sande novum. Porta an
+                        urna, vestibulum commodo.
                     </p>
 
                     <div class="ques-arrow-icn-border mt-4" id="icn-3">
                         <img src="assets/image/bg-fixed-icn/sm-icon-arrow.png" class="ques-arrow-icn" />
                     </div>
-                    <p class="about-question" id="ques-3">WHAT KIND OF CAR WASH SHOULD I CHOOSE?</p>
-                    <p class="about-answer mt-4" id="ans-3">Metro vehicula est terminal integer. Suspendisse a novum
-                        etos
-                        pellentesque a non felis maecenas malesuada. Primus elit lectus at felis, malesuada ultric
-                        curabitur a ligula sande novum. Porta an urna, vestibulum commodo.
+                    <p class="about-question" id="ques-3">
+                        WHAT KIND OF CAR WASH SHOULD I CHOOSE?
+                    </p>
+                    <p class="about-answer mt-4" id="ans-3">
+                        Metro vehicula est terminal integer. Suspendisse a novum etos
+                        pellentesque a non felis maecenas malesuada. Primus elit lectus at
+                        felis, malesuada ultric curabitur a ligula sande novum. Porta an
+                        urna, vestibulum commodo.
                     </p>
 
                     <div class="ques-arrow-icn-border mt-4" id="icn-4">
                         <img src="assets/image/bg-fixed-icn/sm-icon-arrow.png" class="ques-arrow-icn" />
                     </div>
-                    <p class="about-question" id="ques-4">IS A TOUCHLESS CAR WASH THE SAFEST?</p>
-                    <p class="about-answer mt-4" id="ans-4">Metro vehicula est terminal integer. Suspendisse a novum
-                        etos
-                        pellentesque a non felis maecenas malesuada. Primus elit lectus at felis, malesuada ultric
-                        curabitur a ligula sande novum. Porta an urna, vestibulum commodo.
+                    <p class="about-question" id="ques-4">
+                        IS A TOUCHLESS CAR WASH THE SAFEST?
                     </p>
-
+                    <p class="about-answer mt-4" id="ans-4">
+                        Metro vehicula est terminal integer. Suspendisse a novum etos
+                        pellentesque a non felis maecenas malesuada. Primus elit lectus at
+                        felis, malesuada ultric curabitur a ligula sande novum. Porta an
+                        urna, vestibulum commodo.
+                    </p>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                     <p class="about-hdng">QUALITY OF SERVICE</p>
@@ -280,7 +288,6 @@
         </div>
     </div>
 
-
     <div class="container-flud">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d805202.1187293439!2d144.39367650156737!3d-37.96964265459669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad646b5d2ba4df7%3A0x4045675218ccd90!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2s!4v1714057166642!5m2!1sen!2s"
@@ -291,7 +298,6 @@
         <p>SHOW MAP</p>
     </div>
 
-
     <div class="container-fluid footer-sec">
         <div class="container">
             <div class="row">
@@ -301,7 +307,7 @@
                         Autospa Hand Wash is an eco-friendly hand car wash and detailing
                         service based in Portland.
                     </p>
-                    <a href="Home.html"><img src="assets/image/logo white.png" height="80px" class="mt-2"></a>
+                    <a href="Home.html"><img src="assets/image/logo white.png" height="80px" class="mt-2" /></a>
                 </div>
                 <div class="col-3 col-lg-3 col-md-12 col-12 mt-5">
                     <span class="footer-title">SERVICES</span>
@@ -315,11 +321,11 @@
                 <div class="col-2 col-lg-2 col-md-12 col-12 mt-5">
                     <span class="footer-title">COMPANY</span>
                     <a href="About.html" class="srvs-list mt-5">About Us</a>
-                    <a href="Gallery.html" class="srvs-list ">Gallery</a>
-                    <a href="" class="srvs-list ">Blog</a>
-                    <a href="Service's.html" class="srvs-list ">Services</a>
-                    <a href="" class="srvs-list ">Book Your Wash I</a>
-                    <a href="Contact.html" class="srvs-list ">Contact</a>
+                    <a href="Gallery.html" class="srvs-list">Gallery</a>
+                    <a href="" class="srvs-list">Blog</a>
+                    <a href="Service's.html" class="srvs-list">Services</a>
+                    <a href="" class="srvs-list">Book Your Wash I</a>
+                    <a href="Contact.html" class="srvs-list">Contact</a>
                 </div>
                 <div class="col-4 col-lg-4 col-md-12 col-12 mt-5">
                     <span class="footer-title">NEWSLETTER</span>
