--- a/Auto Spa - Car Wash/Contact.html
+++ b/Auto Spa - Car Wash/Contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us</title>
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -17,34 +17,31 @@
 </head>
 
 <body>
-
     <div class="container-fluid cntct-bnr">
-
         <nav class="navbar navbar-expand-xl fixed-top" id="navigation">
-
-            <a href="index.html" class="navbar-brand"><img src="assets/image/logo_sticky.png" height="80px"
-                    class="ms-5"></a>
+            <a href="index.html" class="navbar-brand">
+                <div id="logo-img"></div>
+            </a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navi" id="nav-btn">
                 <i class="navbar-toggler-icon"></i>
             </button>
 
             <div class="collapse navbar-collapse justify-content-center" id="navi">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="Home.html" class="nav-link"><span
-                                class="nav-txt hvr-float">HOME</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">BOOKING</span></a>
+                    <li class="nav-item"><a href="index.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">HOME</span></a></li>
                     </li>
-                    <li class="nav-item"><a href="Service's.html" class="nav-link"><span
-                                class="nav-txt hvr-float">SERVICES</span></a></li>
-                    <li class="nav-item"><a href="Gallery.html" class="nav-link"><span
-                                class="nav-txt hvr-float">GALLERY</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">SHOP</span></a>
+                    <li class="nav-item"><a href="Service's.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">SERVICES</span></a></li>
+                    <li class="nav-item"><a href="Gallery.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">GALLERY</span></a>
                     </li>
-                    <li class="nav-item"><a href="About.html" class="nav-link"><span
-                                class="nav-txt hvr-float">ABOUT</span></a>
+                    <li class="nav-item"><a href="About.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">ABOUT</span></a>
                     </li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link"><span
-                                class="nav-txt hvr-float">CONTACT</span></a></li>
+                    <li class="nav-item"><a href="Contact.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">CONTACT</span></a>
+                    </li>
                 </ul>
 
                 <div id="icn-box">
@@ -55,40 +52,42 @@
                     <a href=""><i class="hvr-float fa-solid fa-magnifying-glass nav-icn"></i></a>
                 </div>
             </div>
-
         </nav>
 
         <div class="container text-center">
+            <h1 class="bnr-txt" data-aos="fade-down" data-aos-duration="1000">
+                CONTACT
+            </h1>
 
-            <h1 class="bnr-txt" data-aos="fade-down" data-aos-duration="1000">CONTACT</h1>
-
-            <a href="Home.html" class="brdcrumb-lnk">HOME</a>
+            <a href="index.html" class="brdcrumb-lnk">HOME</a>
             <span class="brdcrumb-divider">></span>
             <span class="brdcrumb-txt">CONTACT</span>
-
         </div>
-
     </div>
 
-
-    <div class="container-fluid" style="float: left;">
+    <div class="container-fluid" style="float: left">
         <div class="container info-cntnr">
             <div class="row mt-5">
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5" data-aos="fade-right"><img
-                        src="assets/image/contact icon 1.png" height="50px" alt=""><span class="icn-txt ms-4">CALL US
-                        AT</span><br><a href="" class="cntct-num ">(+505) 122 225 225</a><br><a href=""
-                        class="cntct-num ">(+505) 122 225 224</a></div>
-                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5 " data-aos="fade-right"><img
-                        src="assets/image/contact icon 2.png" height="50px" alt=""><span class="icn-txt ms-4">OUR
-                        ADDRESS</span>
-                    <p class="adrs-time ms-5">464 Rhode Island Av. <br>
-                        Portland, OR 97219</p>
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5" data-aos="fade-right">
+                    <img src="assets/image/contact icon 1.png" height="50px" alt="" /><span class="icn-txt ms-4">CALL US
+                        AT</span><br /><a href="" class="cntct-num">(+505) 122 225 225</a><br /><a href=""
+                        class="cntct-num">(+505) 122 225 224</a>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 col-12 mt-5 " data-aos="fade-right"><img
-                        src="assets/image/contact icon 3.png" height="50px" alt=""><span class="icn-txt ms-4">WORKING
+                <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5" data-aos="fade-right">
+                    <img src="assets/image/contact icon 2.png" height="50px" alt="" /><span class="icn-txt ms-4">OUR
+                        ADDRESS</span>
+                    <p class="adrs-time ms-5">
+                        464 Rhode Island Av. <br />
+                        Portland, OR 97219
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12 col-12 mt-5" data-aos="fade-right">
+                    <img src="assets/image/contact icon 3.png" height="50px" alt="" /><span class="icn-txt ms-4">WORKING
                         HOURS</span>
-                    <p class="adrs-time ms-5">Monday – Friday: 8 am – 6 pm <br>
-                        Saturday: 8 am – 3 pm</p>
+                    <p class="adrs-time ms-5">
+                        Monday – Friday: 8 am – 6 pm <br />
+                        Saturday: 8 am – 3 pm
+                    </p>
                 </div>
             </div>
 
@@ -96,37 +95,43 @@
                 <div class="row">
                     <div class="col-6 col-md-6 col-sm-12 col-12">
                         <div class="row">
-                            <div class="col-12 col-md-12 col-sm-12 col-12"><input type="text" placeholder="Your Name *"
-                                    class="email-etc border" data-aos="fade-right" data-aos-duration="500"></div>
+                            <div class="col-12 col-md-12 col-sm-12 col-12">
+                                <input type="text" placeholder="Your Name *" class="email-etc border"
+                                    data-aos="fade-right" data-aos-duration="500" />
+                            </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-12 col-md-12 col-sm-12 col-12"><input type="text"
-                                    placeholder="Your Email  *" class="email-etc border" data-aos="fade-right"
-                                    data-aos-duration="500" data-aos-delay="100"></div>
+                            <div class="col-12 col-md-12 col-sm-12 col-12">
+                                <input type="text" placeholder="Your Email  *" class="email-etc border"
+                                    data-aos="fade-right" data-aos-duration="500" data-aos-delay="100" />
+                            </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-12 col-md-12 col-sm-12 col-12"><input type="text" placeholder="Phone Number"
-                                    class="email-etc border" data-aos="fade-right" data-aos-duration="500"
-                                    data-aos-delay="200"></div>
+                            <div class="col-12 col-md-12 col-sm-12 col-12">
+                                <input type="text" placeholder="Phone Number" class="email-etc border"
+                                    data-aos="fade-right" data-aos-duration="500" data-aos-delay="200" />
+                            </div>
                         </div>
-
                     </div>
 
-                    <div class="col-6 col-md-6 col-sm-12 col-12"><input placeholder="message" class="msg-area border"
-                            data-aos="fade-left" data-aos-duration="600"></div>
+                    <div class="col-6 col-md-6 col-sm-12 col-12">
+                        <input placeholder="message" class="msg-area border" data-aos="fade-left"
+                            data-aos-duration="600" />
+                    </div>
                 </div>
 
-                <div class="row mt-5" style="margin-bottom: 80px;">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-12 text-center"><button class="Sumbit-btn"
-                            data-aos="fade-up" data-aos-duration="700" data-aos-delay="100">Sumbit Message</button>
+                <div class="row mt-5" style="margin-bottom: 80px">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-12 text-center">
+                        <button class="Sumbit-btn" data-aos="fade-up" data-aos-duration="700" data-aos-delay="100">
+                            Sumbit Message
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 
     <div class="container-flud">
         <iframe
@@ -139,51 +144,48 @@
         <p>SHOW MAP</p>
     </div>
 
-
-    <div class="container-fluid footer-sec" style="background-color: #222222;">
+    <div class="container-fluid footer-sec" style="background-color: #222222">
         <div class="container">
             <div class="row">
                 <div class="col-3 col-lg-3 col-md-12 col-12 mt-5">
                     <span class="footer-title">ABOUT</span>
-                    <p class="about-pera mt-5">Autospa Hand Wash is an eco-friendly hand car wash and detailing service
-                        based in Portland.
+                    <p class="about-pera mt-5">
+                        Autospa Hand Wash is an eco-friendly hand car wash and detailing
+                        service based in Portland.
                     </p>
-                    <a href="Home.html"><img src="assets/image/logo white.png" height="80px" class="mt-2"></a>
+                    <a href="Home.html"><img src="assets/image/logo white.png" height="80px" class="mt-2" /></a>
                 </div>
-                <div class="col-3 col-lg-3 col-md-12 col-12 mt-5 ">
+                <div class="col-3 col-lg-3 col-md-12 col-12 mt-5">
                     <span class="footer-title">SERVICES</span>
                     <a href="" class="srvs-list mt-5">Exterior Hand Wash</a>
-                    <a href="" class="srvs-list ">Tower Hand Dry</a>
-                    <a href="" class="srvs-list ">Tire Dressing</a>
-                    <a href="" class="srvs-list ">Wheel Shine</a>
-                    <a href="" class="srvs-list ">Interior Vacuum</a>
-                    <a href="" class="srvs-list ">Sealer Hand Wax</a>
-
-
+                    <a href="" class="srvs-list">Tower Hand Dry</a>
+                    <a href="" class="srvs-list">Tire Dressing</a>
+                    <a href="" class="srvs-list">Wheel Shine</a>
+                    <a href="" class="srvs-list">Interior Vacuum</a>
+                    <a href="" class="srvs-list">Sealer Hand Wax</a>
                 </div>
                 <div class="col-2 col-lg-2 col-md-12 col-12 mt-5">
                     <span class="footer-title">COMPANY</span>
                     <a href="About.html" class="srvs-list mt-5">About Us</a>
-                    <a href="Gallery.html" class="srvs-list ">Gallery</a>
-                    <a href="" class="srvs-list ">Blog</a>
-                    <a href="Service's.html" class="srvs-list ">Services</a>
-                    <a href="" class="srvs-list ">Book Your Wash I</a>
-                    <a href="Contact.html" class="srvs-list ">Contact</a>
+                    <a href="Gallery.html" class="srvs-list">Gallery</a>
+                    <a href="" class="srvs-list">Blog</a>
+                    <a href="Service's.html" class="srvs-list">Services</a>
+                    <a href="" class="srvs-list">Book Your Wash I</a>
+                    <a href="Contact.html" class="srvs-list">Contact</a>
                 </div>
                 <div class="col-4 col-lg-4 col-md-12 col-12 mt-5">
-                    <span class="footer-title ">NEWSLETTER</span>
+                    <span class="footer-title">NEWSLETTER</span>
 
-                    <div class="email-smbt-btn  mt-5">
-                        <input type="email" placeholder="Email address:">
+                    <div class="email-smbt-btn mt-5">
+                        <input type="email" placeholder="Email address:" />
                         <button class="footer-smbt-btn mt-5">Sign up</button>
                     </div>
-
                 </div>
             </div>
 
-            <hr class="footer-line">
+            <hr class="footer-line" />
 
-            <div class="container-fluid mb-5" style="display: flex; justify-content: center; align-items: center;">
+            <div class="container-fluid mb-5" style="display: flex; justify-content: center; align-items: center">
                 <a href="" class="footer-icns"><i class="fa-brands fa-twitter" data-aos="fade-up"
                         data-aos-duration="500" data-aos-delay=""></i></a>
                 <a href="" class="footer-icns"><i class="fa-brands fa-dribbble" data-aos="fade-up"
@@ -196,10 +198,10 @@
                         data-aos-duration="500" data-aos-delay="400"></i></a>
             </div>
 
-            <div class="container mb-5" style="display: flex; justify-content: center; align-items: center;">
+            <div class="container mb-5" style="display: flex; justify-content: center; align-items: center">
                 <div class="row">
                     <div class="col-12 col-md-12 col-sm-12">
-                        <span style="color: #888484; font-size: 14px;">By Rabiyan Rafiq © 2021</span><a href=""
+                        <span style="color: #888484; font-size: 14px">By Rabiyan Rafiq © 2021</span><a href=""
                             class="end-lnk ms-2">Auto Spa - Car Wash Auto Detail WordPress Theme
                         </a>
                     </div>
@@ -207,7 +209,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 <script>
