--- a/Auto Spa - Car Wash/Gallery.html
+++ b/Auto Spa - Car Wash/Gallery.html
@@ -17,33 +17,31 @@
 </head>
 
 <body>
-
     <div class="container-fluid gallery-bnr">
         <nav class="navbar navbar-expand-xl fixed-top" id="navigation">
-
-            <a href="index.html" class="navbar-brand"><img src="assets/image/logo_sticky.png" height="80px"
-                    class="ms-5"></a>
+            <a href="index.html" class="navbar-brand">
+                <div id="logo-img"></div>
+            </a>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navi" id="nav-btn">
                 <i class="navbar-toggler-icon"></i>
             </button>
 
             <div class="collapse navbar-collapse justify-content-center" id="navi">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="Home.html" class="nav-link"><span
-                                class="nav-txt hvr-float">HOME</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">BOOKING</span></a>
+                    <li class="nav-item"><a href="index.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">HOME</span></a></li>
                     </li>
-                    <li class="nav-item"><a href="Service's.html" class="nav-link"><span
-                                class="nav-txt hvr-float">SERVICES</span></a></li>
-                    <li class="nav-item"><a href="Gallery.html" class="nav-link"><span
-                                class="nav-txt hvr-float">GALLERY</span></a></li>
-                    <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">SHOP</span></a>
+                    <li class="nav-item"><a href="Service's.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">SERVICES</span></a></li>
+                    <li class="nav-item"><a href="Gallery.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">GALLERY</span></a>
                     </li>
-                    <li class="nav-item"><a href="About.html" class="nav-link"><span
-                                class="nav-txt hvr-float">ABOUT</span></a>
+                    <li class="nav-item"><a href="About.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">ABOUT</span></a>
                     </li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link"><span
-                                class="nav-txt hvr-float">CONTACT</span></a></li>
+                    <li class="nav-item"><a href="Contact.html" class="nav-link hvr-underline-reveal"><span
+                                class="nav-txt">CONTACT</span></a>
+                    </li>
                 </ul>
 
                 <div id="icn-box">
@@ -54,7 +52,6 @@
                     <a href=""><i class="hvr-float fa-solid fa-magnifying-glass nav-icn"></i></a>
                 </div>
             </div>
-
         </nav>
 
         <div class="container text-center">
@@ -62,73 +59,107 @@
                 GALLERY
             </h1>
 
-            <a href="Home.html" class="brdcrumb-lnk">HOME</a>
+            <a href="index.html" class="brdcrumb-lnk">HOME</a>
             <span class="brdcrumb-divider">></span>
             <span class="brdcrumb-txt">GALLERY</span>
         </div>
     </div>
 
-    <div class="container-fluid" style="margin-top: 100px;">
+    <div class="container-fluid" style="margin-top: 100px">
         <div class="container text-center">
             <button id="project-btn-1">&nbsp; &nbsp;All&nbsp; &nbsp;</button>
             <button id="project-btn-2">Auto Detail</button>
             <button id="project-btn-3">Hand Polish</button>
             <button id="project-btn-4">Hand Wash</button>
             <button id="project-btn-5">Hand wax</button>
-            <button id="project-btn-6">Triple Foam </button>
+            <button id="project-btn-6">Triple Foam</button>
         </div>
     </div>
 
-
-    <div class="container-fluid mt-5 text-center" style="margin-bottom: 80px;">
+    <div class="container-fluid mt-5 text-center" style="margin-bottom: 80px">
         <div class="container car-imgs-box">
-            <div class="img-1" id="pic-1"><img src="assets/image/sample 1.jpg" class="w-100 h-100">
+            <div class="img-1" id="pic-1">
+                <img src="assets/image/sample 1.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-1-4-5">BMW I3</p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-1-4-5">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-1-4-5">Triple Foam</p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-1-4-5">
+                        BMW I3
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-1-4-5" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-1-4-5">
+                        Triple Foam
+                    </p>
                 </div>
             </div>
-            <div class="img-2" id="pic-2"><img src="assets/image/sample 2.jpg" class="w-100 h-100">
+            <div class="img-2" id="pic-2">
+                <img src="assets/image/sample 2.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">Renault Clio</p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">Hand Polish</p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">
+                        Renault Clio
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">
+                        Hand Polish
+                    </p>
                 </div>
             </div>
-            <div class="img-3" id="pic-3"><img src="assets/image/sample 3.jpg" class="w-100 h-100">
+            <div class="img-3" id="pic-3">
+                <img src="assets/image/sample 3.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">Volkswagen Polo </p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">Interior Dusting</p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">
+                        Volkswagen Polo
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">
+                        Interior Dusting
+                    </p>
                 </div>
             </div>
-            <div class="img-4" id="pic-4"><img src="assets/image/sample 4.jpg" class="w-100 h-100">
+            <div class="img-4" id="pic-4">
+                <img src="assets/image/sample 4.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-1-4-5">BMW Mini Cooper </p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-1-4-5">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-1-4-5">Wheel Shine</p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-1-4-5">
+                        BMW Mini Cooper
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-1-4-5" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-1-4-5">
+                        Wheel Shine
+                    </p>
                 </div>
             </div>
-            <div class="img-5" id="pic-5"><img src="assets/image/sample 5.jpg" class="w-100 h-100">
+            <div class="img-5" id="pic-5">
+                <img src="assets/image/sample 5.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-1-4-5">Fiat Bravo </p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-1-4-5">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-1-4-5">Cleaning Waterless Wash </p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-1-4-5">
+                        Fiat Bravo
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-1-4-5" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-1-4-5">
+                        Cleaning Waterless Wash
+                    </p>
                 </div>
             </div>
-            <div class=" img-6" id="pic-6"><img src="assets/image/sample 6.jpg" class="w-100 h-100">
+            <div class="img-6" id="pic-6">
+                <img src="assets/image/sample 6.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">Mazda 3 </p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">Scratch Repair</p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">
+                        Mazda 3
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">
+                        Scratch Repair
+                    </p>
                 </div>
             </div>
-            <div class="img-7" id="pic-7"><img src="assets/image/sample 7.jpg" class="w-100 h-100">
+            <div class="img-7" id="pic-7">
+                <img src="assets/image/sample 7.jpg" class="w-100 h-100" />
                 <div class="hover-slide-up text-center">
-                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">Mercedes A200 </p>
-                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7">
-                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">Hazy Headlights Restoring</p>
+                    <p class="hover-slide-up-car-name" id="hdng-for-img-2-3-6-7">
+                        Mercedes A200
+                    </p>
+                    <hr class="hover-slide-up-line" id="hdng-for-img-2-3-6-7" />
+                    <p class="hover-slide-up-txt" id="hdng-for-img-2-3-6-7">
+                        Hazy Headlights Restoring
+                    </p>
                 </div>
             </div>
         </div>
@@ -146,53 +177,48 @@
         <p>SHOW MAP</p>
     </div>
 
-
     <div class="container-fluid footer-sec">
         <div class="container">
             <div class="row">
                 <div class="col-3 col-lg-3 col-md-12 col-12 mt-5">
                     <span class="footer-title">ABOUT</span>
-                    <p class="about-pera mt-5">Autospa Hand Wash is an eco-friendly hand car wash and detailing service
-                        based
-                        in
-                        Portland.
+                    <p class="about-pera mt-5">
+                        Autospa Hand Wash is an eco-friendly hand car wash and detailing
+                        service based in Portland.
                     </p>
-                    <a href="Home.html"><img src="assets/image/logo white.png" height="80px" class="mt-2"></a>
+                    <a href="Home.html"><img src="assets/image/logo white.png" height="80px" class="mt-2" /></a>
                 </div>
-                <div class="col-3 col-lg-3 col-md-12 col-12 mt-5 ">
+                <div class="col-3 col-lg-3 col-md-12 col-12 mt-5">
                     <span class="footer-title">SERVICES</span>
                     <a href="" class="srvs-list mt-5">Exterior Hand Wash</a>
-                    <a href="" class="srvs-list ">Tower Hand Dry</a>
-                    <a href="" class="srvs-list ">Tire Dressing</a>
-                    <a href="" class="srvs-list ">Wheel Shine</a>
-                    <a href="" class="srvs-list ">Interior Vacuum</a>
-                    <a href="" class="srvs-list ">Sealer Hand Wax</a>
-
-
+                    <a href="" class="srvs-list">Tower Hand Dry</a>
+                    <a href="" class="srvs-list">Tire Dressing</a>
+                    <a href="" class="srvs-list">Wheel Shine</a>
+                    <a href="" class="srvs-list">Interior Vacuum</a>
+                    <a href="" class="srvs-list">Sealer Hand Wax</a>
                 </div>
                 <div class="col-2 col-lg-2 col-md-12 col-12 mt-5">
                     <span class="footer-title">COMPANY</span>
                     <a href="About.html" class="srvs-list mt-5">About Us</a>
-                    <a href="Gallery.html" class="srvs-list ">Gallery</a>
-                    <a href="" class="srvs-list ">Blog</a>
-                    <a href="Service's.html" class="srvs-list ">Services</a>
-                    <a href="" class="srvs-list ">Book Your Wash I</a>
-                    <a href="Contact.html" class="srvs-list ">Contact</a>
+                    <a href="Gallery.html" class="srvs-list">Gallery</a>
+                    <a href="" class="srvs-list">Blog</a>
+                    <a href="Service's.html" class="srvs-list">Services</a>
+                    <a href="" class="srvs-list">Book Your Wash I</a>
+                    <a href="Contact.html" class="srvs-list">Contact</a>
                 </div>
                 <div class="col-4 col-lg-4 col-md-12 col-12 mt-5">
                     <span class="footer-title">NEWSLETTER</span>
 
                     <div class="email-smbt-btn mt-5">
-                        <input type="email" placeholder="Email address:">
+                        <input type="email" placeholder="Email address:" />
                         <button class="footer-smbt-btn mt-5">Sign up</button>
                     </div>
-
                 </div>
             </div>
 
-            <hr class="footer-line">
+            <hr class="footer-line" />
 
-            <div class="container-fluid mb-5" style="display: flex; justify-content: center; align-items: center;">
+            <div class="container-fluid mb-5" style="display: flex; justify-content: center; align-items: center">
                 <a href="" class="footer-icns"><i class="fa-brands fa-twitter" data-aos="fade-up"
                         data-aos-duration="500" data-aos-delay=""></i></a>
                 <a href="" class="footer-icns"><i class="fa-brands fa-dribbble" data-aos="fade-up"
@@ -205,10 +231,10 @@
                         data-aos-duration="500" data-aos-delay="400"></i></a>
             </div>
 
-            <div class="container mb-5" style="display: flex; justify-content: center; align-items: center;">
+            <div class="container mb-5" style="display: flex; justify-content: center; align-items: center">
                 <div class="row">
                     <div class="col-12 col-md-12 col-sm-12 mb-5">
-                        <span style="color: #888484; font-size: 14px;">By Rabiyan Rafiq © 2021</span><a href=""
+                        <span style="color: #888484; font-size: 14px">By Rabiyan Rafiq © 2021</span><a href=""
                             class="end-lnk ms-2">Auto Spa - Car Wash Auto Detail WordPress Theme
                         </a>
                     </div>
@@ -216,7 +242,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 <script>
