--- a/Auto Spa - Car Wash/index.html
+++ b/Auto Spa - Car Wash/index.html
@@ -22,25 +22,28 @@
 
   <nav class="navbar navbar-expand-xl fixed-top" id="navigation">
 
-    <a href="index.html" class="navbar-brand"><img src="assets/image/logo_sticky.png" height="80px" class="ms-5"></a>
+    <a href="index.html" class="navbar-brand">
+      <div id="logo-img"></div>
+    </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navi" id="nav-btn">
       <i class="navbar-toggler-icon"></i>
     </button>
 
     <div class="collapse navbar-collapse justify-content-center" id="navi">
       <ul class="navbar-nav">
-        <li class="nav-item"><a href="Home.html" class="nav-link"><span class="nav-txt hvr-float">HOME</span></a></li>
-        <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">BOOKING</span></a>
+        <li class="nav-item"><a href="index.html" class="nav-link hvr-underline-reveal"><span
+              class="nav-txt">HOME</span></a></li>
         </li>
-        <li class="nav-item"><a href="Service's.html" class="nav-link"><span
-              class="nav-txt hvr-float">SERVICES</span></a></li>
-        <li class="nav-item"><a href="Gallery.html" class="nav-link"><span class="nav-txt hvr-float">GALLERY</span></a>
+        <li class="nav-item"><a href="Service's.html" class="nav-link hvr-underline-reveal"><span
+              class="nav-txt">SERVICES</span></a></li>
+        <li class="nav-item"><a href="Gallery.html" class="nav-link hvr-underline-reveal"><span
+              class="nav-txt">GALLERY</span></a>
         </li>
-        <li class="nav-item"><a href="" class="nav-link"><span class="nav-txt hvr-float">SHOP</span></a>
+        <li class="nav-item"><a href="About.html" class="nav-link hvr-underline-reveal"><span
+              class="nav-txt">ABOUT</span></a>
         </li>
-        <li class="nav-item"><a href="About.html" class="nav-link"><span class="nav-txt hvr-float">ABOUT</span></a>
-        </li>
-        <li class="nav-item"><a href="Contact.html" class="nav-link"><span class="nav-txt hvr-float">CONTACT</span></a>
+        <li class="nav-item"><a href="Contact.html" class="nav-link hvr-underline-reveal"><span
+              class="nav-txt">CONTACT</span></a>
         </li>
       </ul>
 
@@ -351,13 +354,14 @@
       <div class="col-lg-6 col-md-12 col-sm-12 col-12 home-writting-part">
         <div class="row mt-5">
           <div class="col-lg-1"></div>
-          <div class="col-lg-5 mt-5 "><img src="assets/image/home-icons/icon-1.png">
+          <div class="col-lg-5 mt-5 abc"><img class="cc" src="assets/image/home-icons/icon-1.png">
             <p class="features-hdng mt-4">CONVENIENCE</p>
             <p class="features-pera" style="font-size: 15px;">We are dedicated to providing quality service, customer
               satisfaction at a great value in multiple locations offering convenient hours.</p>
           </div>
           <div class="col-lg-1"></div>
-          <div class="col-lg-5 mt-5 "><img src="assets/image/home-icons/icon-2.png" style="margin-top: 3px;">
+          <div class="col-lg-5 mt-5 abc"><img class="cc" src="assets/image/home-icons/icon-2.png"
+              style="margin-top: 3px;">
             <p class="features-hdng mt-4">ORGANIC PRODUCTS</p>
             <p class="features-pera" style="font-size: 15px;">We are dedicated to providing quality service, customer
               satisfaction at a great value in multiple locations offering convenient hours.</p>
@@ -366,13 +370,14 @@
 
         <div class="row mt-2">
           <div class="col-lg-1"></div>
-          <div class="col-lg-5 mt-5 "><img src="assets/image/home-icons/icon-3.png">
+          <div class="col-lg-5 mt-5 abc"><img class="cc" src="assets/image/home-icons/icon-3.png">
             <p class="features-hdng mt-4">EXPERIENCED TEAM</p>
             <p class="features-pera" style="font-size: 15px;">We are dedicated to providing quality service, customer
               satisfaction at a great value in multiple locations offering convenient hours.</p>
           </div>
           <div class="col-lg-1"></div>
-          <div class="col-lg-5 mt-5 "><img src="assets/image/home-icons/icon-4.png" style="margin-top: 3px;">
+          <div class="col-lg-5 mt-5 abc"><img class="cc" src="assets/image/home-icons/icon-4.png"
+              style="margin-top: 3px;">
             <p class="features-hdng mt-4">GREAT VALUE</p>
             <p class="features-pera" style="font-size: 15px;">We are dedicated to providing quality service, customer
               satisfaction at a great value in multiple locations offering convenient hours.</p>
