--- a/Auto Spa - Car Wash/Contact.html
+++ b/Auto Spa - Car Wash/Contact.html
@@ -14,6 +14,7 @@
     <script src="assets/js/My jQuery.js.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="icon" href="assets/image/favicon/icons8-automatic-car-wash-50.png" type="png">
 </head>
 
 <body>
