change in buttons.

--- a/Auto Spa - Car Wash/Service's.html
+++ b/Auto Spa - Car Wash/Service's.html
@@ -159,11 +159,11 @@
       <div class="col-lg-6 col-md-6 col-sm-12 col-12 img-sec2"></div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-12 writting-sec text-center">
-        <h3 data-aos="fade-left">EXPERIENCED TEAM</h3>
-        <hr class="srvc-line mt-4" data-aos="fade-left">
-        <p class="srvc-sub-hdng" data-aos="fade-left">We can deliver the best result</p>
+        <h3 data-aos="fade-right">EXPERIENCED TEAM</h3>
+        <hr class="srvc-line mt-4" data-aos="fade-right">
+        <p class="srvc-sub-hdng" data-aos="fade-right">We can deliver the best result</p>
         <div class="container mt-5">
-          <h6 data-aos="fade-left">Nunc imperdiet massa eget sollicitudin venenatis ligula nisi
+          <h6 data-aos="fade-right">Nunc imperdiet massa eget sollicitudin venenatis ligula nisi
             porttitor justo eu <br>
             laoreet libero tellus quis augue. Etiam tristique tristique risus nec egestas. <br> Suspendisse pretium
             rutrum velit et congue tortor blandit in. Ut aliquam justo <br>tortor at mollis diam aliquet quis. Nam
@@ -174,7 +174,7 @@
             Cum sociis natoque penatibus et magnis dis parturient montes nascetur <br> ridiculus mus. Nullam laoreet
             turpis vitae dapibus mattis turpis odio ultrices <br> mauris eu semper tortor tellus in erat.
           </h6>
-          <button data-aos="fade-left">Book Appointment</button>
+          <button data-aos="fade-right">Book Appointment</button>
         </div>
       </div>
     </div>
@@ -185,9 +185,9 @@
       <p class="srvc-hdng">VEHICLE TYPE PACKAGES</p>
       <hr class="srvc-line">
       <p class="srvc-sub-hdng">We offer multiple services</p>
-      <button id="sm-car-btn">Small Car</button>
-      <button id="md-car-btn">Medium Car</button>
-      <button id="lg-car-btn">Small SUV</button>
+      <button class="srvs-car-btn">Small Car</button>
+      <button class="srvs-car-btn">Medium Car</button>
+      <button class="srvs-car-btn">Small SUV</button>
       <p class="vehcle-type-packages-pera">Etiam ullamcorper est terminal metro. Suspendisse a novum etos pellentesque a
         non felis maecenas module vimeo at malesuada. Primus elit lectus at felis, malesuada ultricies obec <br>
         curabitur et ligula sande porta node vestibulum une commodo a convallis laoreet enim. Morbi at sinum interdum
@@ -201,26 +201,26 @@
   <div class="container-fluid">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="200">
-          <img src="assets/image/srvc-icons-imgs/icn-1.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="200">
+          <img src="assets/image/srvc-icons-imgs/icn-1.png" class="srvc-img">
           <p class="features-hdng">EASY TO REACH</p>
           <p class="features-pera">Primus combine lectus at node terminal forks craftmanship at gravida enum por etos
             ultricies curabitur et ligula sanden morbi terminal gravida.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="300">
-          <img src="assets/image/srvc-icons-imgs/icn-2.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="300">
+          <img src="assets/image/srvc-icons-imgs/icn-2.png" class="srvc-img">
           <p class="features-hdng mt-3">BEST RESULTS</p>
           <p class="features-pera">Etiam sodales interdum justo id convallis quam sollicitudin pharetra nam gravidam
             vulputate fringilla fusce tellus erat laorel et enim non posuere iaculis risus.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="300">
-          <img src="assets/image/srvc-icons-imgs/icn-3.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="300">
+          <img src="assets/image/srvc-icons-imgs/icn-3.png" class="srvc-img">
           <p class="features-hdng">ECO FRIENDLY</p>
           <p class="features-pera mb-2">Nunc hendrerit ipsum nec enim pellenten tempus proin consectetur sapien non leo
             luctus sed tempus ipsum condimentumm curabitur vel dui molestie.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="400">
-          <img src="assets/image/srvc-icons-imgs/icn-4.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="400">
+          <img src="assets/image/srvc-icons-imgs/icn-4.png" class="srvc-img">
           <p class="features-hdng mt-4">OIL CHANGE</p>
           <p class="features-pera">Ut non iaculis nisi nec gravida diam fusce tincidunt sem id velit placerat semper on
             risus fringilla. Nam quis neque orci proina tempus semper malesuada.</p>
@@ -228,26 +228,26 @@
       </div>
 
       <div class="row mt-2" style="margin-bottom: 100px;">
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="500">
-          <img src="assets/image/srvc-icons-imgs/icn-5.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="500">
+          <img src="assets/image/srvc-icons-imgs/icn-5.png" class="srvc-img">
           <p class="features-hdng">HAND WASH</p>
           <p class="features-pera">Curabitur quis lectus vitae nibh pulvinar porttitor in eget neque donec pellentesa ut
             justo non pulvinar nulla consectetural tincidunt nisi.avida.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="600">
-          <img src="assets/image/srvc-icons-imgs/icn-6.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="600">
+          <img src="assets/image/srvc-icons-imgs/icn-6.png" class="srvc-img">
           <p class="features-hdng">INTERIOR CLEAN</p>
           <p class="features-pera">Mauris maximus massa id urna feugiami lobortis nunc pulvinar velit ut felis facilis
             quis euismod sem placerat nulla vel sem vitae eros convallis cursus.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5" data-aos="fade-up" data-aos-delay="700">
-          <img src="assets/image/srvc-icons-imgs/icn-7.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="700">
+          <img src="assets/image/srvc-icons-imgs/icn-7.png" class="srvc-img">
           <p class="features-hdng">ONLINE PAYMENTS</p>
           <p class="features-pera">Etiam gravida leo vitae aliquam vehicula sem ipsum accumsan justo quis volutpat erat
             lacus a purus sed eu molestie anten ut rhoncus metus at varius tincidunt.</p>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 " data-aos="fade-up" data-aos-delay="800">
-          <img src="assets/image/srvc-icons-imgs/icn-8.png">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-12 mt-5 srvc-hvr" data-aos="fade-up" data-aos-delay="800">
+          <img src="assets/image/srvc-icons-imgs/icn-8.png" class="srvc-img">
           <p class="features-hdng">ENGINE CLEAN</p>
           <p class="features-pera">Donec eu tellus vitae velit tinciduntam facilisis aenean nisi nunc condimentum
             malesuada erat vel mattis auctor diam detiam ut velit vitae justo rhoncus.</p>
