--- a/Auto Spa - Car Wash/index.html
+++ b/Auto Spa - Car Wash/index.html
@@ -394,12 +394,12 @@
       <p class="srvc-hdng">LATEST PROJECTS</p>
       <hr class="srvc-line">
       <p class="srvc-sub-hdng">Car wash gallery</p>
-      <button class="project-btn" id="project-btn-1">&nbsp; &nbsp;All&nbsp; &nbsp;</button>
-      <button class="project-btn" id="project-btn-2">Auto Detail</button>
-      <button class="project-btn" id="project-btn-3">Hand Polish</button>
-      <button class="project-btn" id="project-btn-4">Hand Wash</button>
-      <button class="project-btn" id="project-btn-5">Hand wax</button>
-      <button class="project-btn" id="project-btn-6">Triple Foam </button>
+      <button class="project-btn">&nbsp; &nbsp;All&nbsp; &nbsp;</button>
+      <button class="project-btn">Auto Detail</button>
+      <button class="project-btn">Hand Polish</button>
+      <button class="project-btn">Hand Wash</button>
+      <button class="project-btn">Hand wax</button>
+      <button class="project-btn">Triple Foam </button>
     </div>
   </div>
 
