adding text in baground attachment fixed sec.

--- a/Auto Spa - Car Wash/Service's.html
+++ b/Auto Spa - Car Wash/Service's.html
@@ -147,7 +147,7 @@
             Primus elit lectus at felis malesuada ultricies curabitur et ligula sande. Porta <br> an urna vestibulum
             commodo convallis laoreet enim. Morbi at sinum interdum <br> etos fermentum in dolor supremum.
           </h6>
-          <button data-aos="fade-right">Book Appointment</button>
+          <button class="writing-sec-btn">Book Appointment</button>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-12 img-sec"></div>
@@ -174,7 +174,7 @@
             Cum sociis natoque penatibus et magnis dis parturient montes nascetur <br> ridiculus mus. Nullam laoreet
             turpis vitae dapibus mattis turpis odio ultrices <br> mauris eu semper tortor tellus in erat.
           </h6>
-          <button data-aos="fade-right">Book Appointment</button>
+          <button class="writing-sec-btn">Book Appointment</button>
         </div>
       </div>
     </div>
