--- a/Auto Spa - Car Wash/index.html
+++ b/Auto Spa - Car Wash/index.html
@@ -177,6 +177,7 @@
         <div class="col-lg-2 col-md-12 col-sm-12 col-12">
           <div class="big-circles text-center"><img src="assets/image/bg-fixed-icn/icn-1.png" class="bg-fixed-icon">
           </div>
+          <p class="background-attachment-fixed-sec-points">1. BOOKING</p>
         </div>
         <div class="col-lg-1 col-md-12 col-sm-12 col-12">
           <div class="small-circles text-center"><img src="assets/image/bg-fixed-icn/sm-icon-arrow.png"
@@ -185,6 +186,7 @@
         <div class="col-lg-2 col-md-12 col-sm-12 col-12">
           <div class="big-circles text-center"><img src="assets/image/bg-fixed-icn/icn-2.png" class="bg-fixed-icon">
           </div>
+          <p class="background-attachment-fixed-sec-points">2. INSPECTION</p>
         </div>
         <div class="col-lg-1 col-md-12 col-sm-12 col-12">
           <div class="small-circles text-center"><img src="assets/image/bg-fixed-icn/sm-icon-arrow.png"
@@ -193,6 +195,7 @@
         <div class="col-lg-2 col-md-12 col-sm-12 col-12">
           <div class="big-circles text-center"><img src="assets/image/bg-fixed-icn/icn-3.png" class="bg-fixed-icon">
           </div>
+          <p class="background-attachment-fixed-sec-points">3. VALUATION</p>
         </div>
         <div class="col-lg-1 col-md-12 col-sm-12 col-12">
           <div class="small-circles text-center"><img src="assets/image/bg-fixed-icn/sm-icon-arrow.png"
@@ -201,6 +204,7 @@
         <div class="col-lg-2 col-md-12 col-sm-12 col-12 mb-5">
           <div class="big-circles text-center"><img src="assets/image/bg-fixed-icn/icn-4.png" class="bg-fixed-icon">
           </div>
+          <p class="background-attachment-fixed-sec-points">4. COMPLETION</p>
         </div>
       </div>
 
@@ -248,6 +252,7 @@
 
     </div>
   </div>
+
 
   <div class="container-fluid mt-5">
     <div class="container mt-5">
@@ -611,3 +616,6 @@
 </script>
 
 </html>
+
+<!-- project link -->
+<!-- http://preview.themeforest.net/item/auto-spa-car-wash-auto-detail-wordpress-theme/full_screen_preview/20097211?_ga=2.28915704.553844483.1716483533-1142631726.1711222353 -->
